# model_drift_experiment

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  README.md  conftest.py  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
docs/: api.md  architecture.md  drift.md  index.md
docs/models/: bert.md  cnn.md
src/: config.py
src/api/: main.py  routes.py
src/data/: __init__.py  generator.py  loader.py
src/drift/: detector.py
src/models/: __init__.py  base.py  bert.py  cnn.py
tests/integration/: test_api.py
tests/unit/: test_config.py  test_drift.py  test_generator.py  test_models.py
